examples/type_checker/001.cstar

main() :: void {
  int a = 20;
  int* b = a;
  int* x = a + b; // cannot initialize ptr type with non-ptr type

  int a0 = 20;
  int *b0 = &a0 + 1;
  int *x0 = a0 + b0; // it's okay

/*  float a0 = 20.0;
  int a1 = 20;
  int *b0 = &a1;
  int *x0 = a0 + b0; // error

  float a0 = 20.0;
  uint a1 = 20;
  uint *b0 = &a1;
  uint *x0 = a1 + b0; // works
*/

  ret;
}

/*

  binop:
    lhs or rhs must be compatible and same type for binary op
    - if expected type is ptr type then only allowed + and - ops.
    - if expected type is non-ptr type then lhs or rhs must be plain type (non-ptr type) 
    


*/